<resources>
    <string name="app_name">慧管工地</string>
    <string name="splash_agree">勾选即表示您同意</string>
    <string name="user_service_agreement">《用户服务协议》</string>
    <string name="add">和</string>
    <string name="privacy_agreement">《隐私协议》</string>
    <string name="experience_immediately">立即体验</string>
    <string name="login_phone">手机登陆</string>
    <string name="login_phone_register">手机号登陆无需注册</string>
    <string name="eighty_six">+86</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="user_info">用户基本信息</string>
    <string name="name">姓名</string>
    <string name="company_name">公司名</string>
    <string name="input_job">输入职位</string>
    <string name="select_area">选择地区</string>
    <string name="select_specialty">选择专业</string>
    <string name="confirm">确 认</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="area">区县</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="send_again">重新发送</string>
    <string name="second">s</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_company">请输入参与公司名称</string>
    <string name="please_input_job">请输入职位</string>
    <string name="please_select_area">请选择地区</string>
    <string name="please_select_specialty">请选择专业</string>
    <string name="news">消息</string>
    <string name="project">项目</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="no_project">暂无项目</string>
    <string name="change_project">切换项目</string>
    <string name="quality_problem">质量问题</string>
    <string name="safety_problem">安全问题</string>
    <string name="quality_assurance">质量管理</string>
    <string name="security_management">安全管理</string>
    <string name="schedule_management">进度管理</string>
    <string name="daily_report">日常报告</string>
    <string name="workflow">工作流程</string>
    <string name="real_time_monitoring">实时监控</string>
    <string name="error_hint">错误提示</string>
    <string name="error_hint_create">当前无项目，无法继续，请先创建项目。</string>
    <string name="close">关 闭</string>
    <string name="create_project">创建项目</string>
    <string name="project_detail">项目详情</string>
    <string name="save">保存</string>
    <string name="project_name">项目名称</string>
    <string name="first_steps">第一步</string>
    <string name="tow_steps">第二步</string>
    <string name="three_steps">第三步</string>
    <string name="four_steps">第四步</string>
    <string name="input_project_basic_information">录入项目基本信息</string>
    <string name="project_address">项目地址</string>
    <string name="project_describe">项目描述</string>
    <string name="participation_project_companies">参与项目公司</string>
    <string name="profession_list">涉及专业</string>
    <string name="please_input_project_name">请输入项目名称</string>
    <string name="please_input_project_address">请输入项目地址</string>
    <string name="please_input_project_describe">请输入项目描述</string>
    <string name="please_select_participation_project_companies">请选择参与项目公司</string>
    <string name="please_input_company_name">请输入公司名称</string>
    <string name="please_input_specialty_name">请选择涉及专业</string>
    <string name="contract_with">设计承包</string>
    <string name="contract_with_left">没有找到“</string>
    <string name="contract_with_right">”相关结果</string>
    <string name="append">添加</string>
    <string name="design">设计</string>
    <string name="generating_engineering_information">生成工程基础信息</string>
    <string name="axis_map">轴线图</string>
    <string name="manual_creation">手动创建</string>
    <string name="number_completed">栋数为本区域最大栋数</string>
    <string name="number_layers">填写层数</string>
    <string name="number_horizontal_axes">横轴数（1-100）</string>
    <string name="number_vertical_axes">竖轴数（A-Z）</string>
    <string name="whippletree">-</string>
    <string name="create">创 建</string>
    <string name="back_step">上一步</string>
    <string name="building_no">楼号</string>
    <string name="storey">楼层</string>
    <string name="room_number">房间名</string>
    <string name="please_input_number_completed">请输入栋数</string>
    <string name="please_input_number_layers">请输入层数</string>
    <string name="please_input_number_horizontal_axes_start">请选择横轴起始数</string>
    <string name="please_input_number_horizontal_axes_end">请选择横轴结束数</string>
    <string name="please_input_number_vertical_axes_start">请选择竖轴起始数</string>
    <string name="please_input_number_vertical_axes_end">请选择竖轴结束数</string>
    <string name="project_member">项目成员</string>
    <string name="add_member">添加成员</string>
    <string name="transfer_project">移交项目</string>
    <string name="zero">0</string>
    <string name="add_apply">加入申请</string>
    <string name="member_role">成员权限</string>
    <string name="oneself">自己</string>
    <string name="super_manager">超级管理员</string>
    <string name="manager">管理员</string>
    <string name="executant">执行者</string>
    <string name="viewer">查看者</string>
    <string name="affiliated_contractors">所属承包商</string>
    <string name="please_select_contractor">请选择承包商</string>
    <string name="profession">专业</string>
    <string name="tag">标签</string>
    <string name="please_input_tag">请填写成员职位或角色</string>
    <string name="company_name_specialty">公司名称-专业</string>
    <string name="select_contractor">选择承包商</string>
    <string name="scan">扫一扫</string>
    <string name="qr_code">项目二维码</string>
    <string name="add_project">加入项目</string>
    <string name="project_id">项目id</string>
    <string name="apply_add_project">申请加入项目</string>
    <string name="seek_project">查找项目</string>
    <string name="please_input_project_id">请输入项目id</string>
    <string name="project_creater">项目创建人</string>
    <string name="owner">业主方</string>
    <string name="company_address">公司地址</string>
    <string name="contact_way">联系方式</string>
    <string name="people">人</string>
    <string name="team_members">团队成员</string>
    <string name="apply_add">申请加入</string>
    <string name="apply_regard">申请理由</string>
    <string name="input_apply_regard">请填写申请理由，不超过100字</string>
    <string name="confirm_submit">确认提交</string>
    <string name="zero_hundred">0/100</string>
    <string name="hundred">/100</string>
    <string name="apply_success">申请成功</string>
    <string name="plus">+</string>
    <string name="quit_project">退出项目</string>
    <string name="apply_list">申请列表</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="hint">提 示</string>
    <string name="think_again">再想想</string>
    <string name="refuse_hint">确认拒绝该成员的加入吗？</string>
    <string name="allocation_identity">分配身份</string>
    <string name="save_hint">当前更改还未保存，确定放弃么？</string>
    <string name="give_up">放 弃</string>
    <string name="edit_member">编辑成员</string>
    <string name="delete_member">删除成员</string>
    <string name="delete_project_member">删除项目成员</string>
    <string name="delete_project_member_hint">删除成员后，该成员的历史记录将保留</string>
    <string name="cancel">取 消</string>
    <string name="quit_project_hint">退出后仅你参与的项目将会删除，请确保其他同事已加入项目后退出</string>
    <string name="quit_success">退出成功</string>
    <string name="company_info">公司信息</string>
    <string name="company_names">公司名称</string>
    <string name="job">职位</string>
    <string name="other">其他</string>
    <string name="set">设置</string>
    <string name="app_share">APP分享</string>
    <string name="propose">反馈与建议</string>
    <string name="help">帮助中心</string>
    <string name="language">语言</string>
    <string name="company_introduction">公司介绍</string>
    <string name="app_instructions">APP使用说明</string>
    <string name="user_service_agreements">用户服务协议</string>
    <string name="privacy_agreements">隐私协议</string>
    <string name="log_off">退出登录</string>
    <string name="set_language">设置语言</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="company_mobile">400 0934 0234</string>
    <string name="propose_hint">请输入反馈与建议，不超过200字</string>
    <string name="zero_two_hundred">0/200</string>
    <string name="two_hundred">/200</string>
    <string name="submit">提 交</string>
    <string name="submit_success">提交成功</string>
    <string name="talent_recruitment">人才招聘</string>
    <string name="material_supplies">材料供应</string>
    <string name="mechanical_equipment">机械设备</string>
    <string name="labor_subcontract">劳务分包</string>
    <string name="tool_information">工具资料</string>
    <string name="function_not_open">该功能暂未开放，敬请期待</string>
    <string name="please_select_turn_over">请选择移交人</string>
    <string name="generating_reports">生成报告</string>
    <string name="all">全部</string>
    <string name="dealer_company">处理人公司</string>
    <string name="time_screening">时间筛选</string>
    <string name="create_quality_assurance">创建质量管理</string>
    <string name="problem_description">问题描述</string>
    <string name="position_mark">位置标记</string>
    <string name="completion_days">指定完成天数</string>
    <string name="select_dealer">选择处理人</string>
    <string name="select_verifier">选择核查人</string>
    <string name="rx">解决方案</string>
    <string name="select_major">选择所属专业</string>
    <string name="supplementary_questions">问题补充</string>
    <string name="select_building_no">选择楼号</string>
    <string name="select_number_plies">选择层数</string>
    <string name="select_number_horizontal_axes">横轴数%1$s-%2$s种选择</string>
    <string name="select_number_vertical_axes">竖轴数%1$s-%2$s中选择</string>
    <string name="horizontal_axes_start">横轴数起始</string>
    <string name="horizontal_axes_end">横轴数结束</string>
    <string name="vertical_axes_start">竖轴数起始</string>
    <string name="vertical_axes_end">竖轴数结束</string>
    <string name="location_remark">位置备注</string>
    <string name="please_select_dealer">请选择处理人</string>
    <string name="please_select_verifier">请选择核查人</string>
    <string name="nom">号</string>
    <string name="plies">层</string>
    <string name="select_horizontal_axes">选择横轴数</string>
    <string name="select_vertical_axes">选择竖轴数</string>
    <string name="horizontal_axes">横轴数</string>
    <string name="vertical_axes">竖轴数</string>
    <string name="please_select_building_no">请选择楼号</string>
    <string name="please_select_number_plies">请选择层数</string>
    <string name="please_select_horizontal_axes">请选择横轴数</string>
    <string name="please_select_vertical_axes">请选择竖轴数</string>
    <string name="please_input_location_remark">请输入位置备注</string>
    <string name="completion_day">完成天数</string>
    <string name="input_completion_day">输入完成天数</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="until">至</string>
    <string name="please_input_problem_description">请输入问题描述</string>
    <string name="please_input_rx">请输入解决方案</string>
    <string name="please_input_supplementary_questions">请输入问题补充</string>
    <string name="please_select_position_mark">请选择位置标记</string>
    <string name="please_select_completion_days">请选择指定完成天数</string>
    <string name="please_select_dealers">请选择处理人</string>
    <string name="please_select_verifiers">请选择核查人</string>
    <string name="please_select_major">请选择所属专业</string>
    <string name="day">天</string>
    <string name="semicolon">；</string>
    <string name="please_select_start_time">请选择开始时间</string>
    <string name="please_select_end_time">请选择结束时间</string>
    <string name="please_upload_pictures">请上传图片</string>
    <string name="dealers">处理人</string>
    <string name="verifiers">核查人</string>
    <string name="select_address">选择位置</string>
    <string name="remark">备注：</string>
    <string name="in_hand">处理中</string>
    <string name="verification">核查中</string>
    <string name="off_stocks">已完成</string>
    <string name="all_company">全部公司</string>
    <string name="splash_name">江苏南通二建集团有限公司</string>
    <string name="splash_bottom">Jiangsu Nantong NO.2 Construction Engineering(Group)Co.,Ltd</string>
</resources>