<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@mipmap/frame"
    android:gravity="left"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_15"
    android:paddingTop="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15"
    android:paddingBottom="@dimen/dp_15">

    <TextView
        android:id="@+id/scanTv"
        android:layout_width="@dimen/dp_110"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/icon_scan"
        android:drawablePadding="@dimen/dp_11"
        android:text="@string/scan"
        android:textColor="@color/c_0071BC"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:layout_marginTop="@dimen/dp_11"
        android:background="@color/c_B5C7D3" />

    <TextView
        android:id="@+id/qrCodeTv"
        android:layout_width="@dimen/dp_110"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_11"
        android:drawableLeft="@mipmap/icon_qrcode"
        android:drawablePadding="@dimen/dp_11"
        android:text="@string/qr_code"
        android:textColor="@color/c_0071BC"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:layout_marginTop="@dimen/dp_11"
        android:background="@color/c_B5C7D3" />

    <TextView
        android:id="@+id/addProjectTv"
        android:layout_width="@dimen/dp_110"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_11"
        android:drawableLeft="@mipmap/icon_join"
        android:drawablePadding="@dimen/dp_11"
        android:text="@string/add_project"
        android:textColor="@color/c_0071BC"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:layout_marginTop="@dimen/dp_11"
        android:background="@color/c_B5C7D3" />

    <TextView
        android:id="@+id/createProjectTv"
        android:layout_width="@dimen/dp_110"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_11"
        android:drawableLeft="@mipmap/icon_establish"
        android:drawablePadding="@dimen/dp_11"
        android:text="@string/create_project"
        android:textColor="@color/c_0071BC"
        android:textSize="@dimen/sp_15" />


</LinearLayout>