<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SplashActivity"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1.5">

        <ImageView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/splash_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/splash_name"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topV" />

    <TextView
        android:id="@+id/splash_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/splash_bottom"
        android:textColor="@color/c_FF673D"
        android:textSize="@dimen/sp_11"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topV"
        app:layout_constraintVertical_weight="2">


        <TextView
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_marginLeft="@dimen/dp_26"
            android:layout_marginRight="@dimen/dp_26"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/shape_0071bc_12"
            android:gravity="center"
            android:text="@string/experience_immediately"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toTopOf="@+id/agreementV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/agreementV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/splash_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_agree"
                android:textColor="@color/c_BBBBBB"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/user_service_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_service_agreement"
                android:textColor="@color/c_0071BC"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toRightOf="@+id/splash_agree" />

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/c_BBBBBB"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toRightOf="@+id/user_service_agreement" />

            <TextView
                android:id="@+id/privacy_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_agreement"
                android:textColor="@color/c_0071BC"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toRightOf="@+id/add" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>