<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ProjectDetailActivity"
    tools:ignore="MissingConstraints">

    <com.huiguangongdi.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isShowLine="true"
        app:rightText=""
        app:title="@string/propose" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_140"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/shape_white_b5c7d3_12"
        app:layout_constraintTop_toBottomOf="@+id/titleBar">

        <EditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/propose_hint"
            android:maxLength="200"
            android:paddingLeft="@dimen/dp_16"
            android:paddingTop="@dimen/dp_14"
            android:paddingRight="@dimen/dp_16"
            android:textColor="@color/c_001A2B"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/numTv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_weight="1"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/numTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_14"
            android:paddingRight="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_14"
            android:text="@string/zero_two_hundred"
            android:textColor="@color/c_0071BC"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:layout_marginLeft="@dimen/dp_26"
        android:layout_marginRight="@dimen/dp_26"
        android:layout_marginBottom="@dimen/dp_25"
        android:background="@drawable/shape_0071bc_12"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>