<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_30"
    android:layout_marginRight="@dimen/dp_30"
    android:background="@drawable/shape_white_14"
    android:paddingTop="@dimen/dp_15"
    android:paddingBottom="@dimen/dp_15"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_project"
        android:textColor="@color/c_001A2B"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="@dimen/dp_38"
        android:paddingRight="@dimen/dp_38"
        android:text="@string/quit_project_hint"
        android:textColor="@color/c_8C9AA3"
        android:textSize="@dimen/sp_13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_44"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_35"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/shape_f5fafd_6"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/c_0071BC"
            android:textSize="@dimen/sp_13"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/confirmBtn" />

        <TextView
            android:id="@+id/confirmBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/shape_0071bc_6"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/cancelBtn"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>